--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>com.xxx.yyy.MainClass</start-class>
+        <start-class>com.education.questioner.Main</start-class>
     </properties>
 
     <dependencies>
