--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.2.RELEASE</version>
                 <configuration>
                     <fork>true</fork>
                     <mainClass>com.education.questioner.Main</mainClass>
